<resources>
    <string name="app_name">BarVolume</string>
    <string name="lebar">Lebar</string>
    <string name="panjang">Panjang</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil</string>
    <string name="nama_erik_rio_setiawan">Nama : Erik Rio Setiawan</string>
    <string name="nim_18532968">NIM : 18532968</string>
</resources>
